exports[`prefer-hooks-on-top > invalid(1): import {describe, it, beforeEach} from 'node:test';\nconst body = () => {\n\tit('a', () => {});\n\tbeforeEach(() => {});\n};\ndescribe('user', body); 1`] = `

  1 | import {describe, it, beforeEach} from 'node:test';
  2 | const body = () => {
  3 | 	it('a', () => {});
  4 | 	beforeEach(() => {});
  5 | };
  6 | describe('user', body);

`;

exports[`prefer-hooks-on-top > invalid(1): import {describe, it, beforeEach} from 'node:test';\nconst body = () => {\n\tit('a', () => {});\n\tbeforeEach(() => {});\n};\ndescribe('user', body); 2`] = `

Message:
  1 | import {describe, it, beforeEach} from 'node:test';
  2 | const body = () => {
  3 | 	it('a', () => {});
> 4 | 	beforeEach(() => {});
    | 	^^^^^^^^^^^^^^^^^^^^ Hook \`beforeEach\` should come before any test or \`describe\` in its scope.
  5 | };
  6 | describe('user', body);

`;

exports[`prefer-hooks-on-top > invalid(10): import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';\nbeforeEach(() => {});\ndescribe(\"s\", () => {\n\tit(\"a\", () => {});\n\tafter(() => {});\n}); 1`] = `

  1 | import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';
  2 | beforeEach(() => {});
  3 | describe("s", () => {
  4 | 	it("a", () => {});
  5 | 	after(() => {});
  6 | });

`;

exports[`prefer-hooks-on-top > invalid(10): import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';\nbeforeEach(() => {});\ndescribe(\"s\", () => {\n\tit(\"a\", () => {});\n\tafter(() => {});\n}); 2`] = `

Message:
  1 | import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';
  2 | beforeEach(() => {});
  3 | describe("s", () => {
  4 | 	it("a", () => {});
> 5 | 	after(() => {});
    | 	^^^^^^^^^^^^^^^ Hook \`after\` should come before any test or \`describe\` in its scope.
  6 | });

`;

exports[`prefer-hooks-on-top > invalid(11): import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';\nit(\"a\", () => {});\nbeforeEach((): void => {}); 1`] = `

  1 | import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';
  2 | it("a", () => {});
  3 | beforeEach((): void => {});

`;

exports[`prefer-hooks-on-top > invalid(11): import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';\nit(\"a\", () => {});\nbeforeEach((): void => {}); 2`] = `

Message:
  1 | import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';
  2 | it("a", () => {});
> 3 | beforeEach((): void => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^ Hook \`beforeEach\` should come before any test or \`describe\` in its scope.

`;

exports[`prefer-hooks-on-top > invalid(12): import {test} from 'node:test';\ntest('p', t => { t.test('a', () => {}); t.beforeEach(() => {}); }); 1`] = `

  1 | import {test} from 'node:test';
  2 | test('p', t => { t.test('a', () => {}); t.beforeEach(() => {}); });

`;

exports[`prefer-hooks-on-top > invalid(12): import {test} from 'node:test';\ntest('p', t => { t.test('a', () => {}); t.beforeEach(() => {}); }); 2`] = `

Message:
  1 | import {test} from 'node:test';
> 2 | test('p', t => { t.test('a', () => {}); t.beforeEach(() => {}); });
    |                                         ^^^^^^^^^^^^^^^^^^^^^^ Hook \`beforeEach\` should come before any test or \`describe\` in its scope.

`;

exports[`prefer-hooks-on-top > invalid(13): import {test, getTestContext} from 'node:test';\ntest('a', t => { t.test('s', () => {}); getTestContext().beforeEach(() => {}); }); 1`] = `

  1 | import {test, getTestContext} from 'node:test';
  2 | test('a', t => { t.test('s', () => {}); getTestContext().beforeEach(() => {}); });

`;

exports[`prefer-hooks-on-top > invalid(13): import {test, getTestContext} from 'node:test';\ntest('a', t => { t.test('s', () => {}); getTestContext().beforeEach(() => {}); }); 2`] = `

Message:
  1 | import {test, getTestContext} from 'node:test';
> 2 | test('a', t => { t.test('s', () => {}); getTestContext().beforeEach(() => {}); });
    |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Hook \`beforeEach\` should come before any test or \`describe\` in its scope.

`;

exports[`prefer-hooks-on-top > invalid(2): import {describe, it, beforeEach} from 'node:test';\ndescribe('user', body);\nfunction body() {\n\tit('a', () => {});\n\tbeforeEach(() => {});\n} 1`] = `

  1 | import {describe, it, beforeEach} from 'node:test';
  2 | describe('user', body);
  3 | function body() {
  4 | 	it('a', () => {});
  5 | 	beforeEach(() => {});
  6 | }

`;

exports[`prefer-hooks-on-top > invalid(2): import {describe, it, beforeEach} from 'node:test';\ndescribe('user', body);\nfunction body() {\n\tit('a', () => {});\n\tbeforeEach(() => {});\n} 2`] = `

Message:
  1 | import {describe, it, beforeEach} from 'node:test';
  2 | describe('user', body);
  3 | function body() {
  4 | 	it('a', () => {});
> 5 | 	beforeEach(() => {});
    | 	^^^^^^^^^^^^^^^^^^^^ Hook \`beforeEach\` should come before any test or \`describe\` in its scope.
  6 | }

`;

exports[`prefer-hooks-on-top > invalid(3): import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';\nit(\"a\", () => {});\nbeforeEach(() => {}); 1`] = `

  1 | import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';
  2 | it("a", () => {});
  3 | beforeEach(() => {});

`;

exports[`prefer-hooks-on-top > invalid(3): import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';\nit(\"a\", () => {});\nbeforeEach(() => {}); 2`] = `

Message:
  1 | import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';
  2 | it("a", () => {});
> 3 | beforeEach(() => {});
    | ^^^^^^^^^^^^^^^^^^^^ Hook \`beforeEach\` should come before any test or \`describe\` in its scope.

`;

exports[`prefer-hooks-on-top > invalid(4): import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';\ndescribe(\"s\", () => {\n\tit(\"a\", () => {});\n\tbeforeEach(() => {});\n}); 1`] = `

  1 | import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';
  2 | describe("s", () => {
  3 | 	it("a", () => {});
  4 | 	beforeEach(() => {});
  5 | });

`;

exports[`prefer-hooks-on-top > invalid(4): import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';\ndescribe(\"s\", () => {\n\tit(\"a\", () => {});\n\tbeforeEach(() => {});\n}); 2`] = `

Message:
  1 | import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';
  2 | describe("s", () => {
  3 | 	it("a", () => {});
> 4 | 	beforeEach(() => {});
    | 	^^^^^^^^^^^^^^^^^^^^ Hook \`beforeEach\` should come before any test or \`describe\` in its scope.
  5 | });

`;

exports[`prefer-hooks-on-top > invalid(5): import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';\nit(\"a\", () => {});\nafterEach(() => {});\nit(\"b\", () => {}); 1`] = `

  1 | import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';
  2 | it("a", () => {});
  3 | afterEach(() => {});
  4 | it("b", () => {});

`;

exports[`prefer-hooks-on-top > invalid(5): import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';\nit(\"a\", () => {});\nafterEach(() => {});\nit(\"b\", () => {}); 2`] = `

Message:
  1 | import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';
  2 | it("a", () => {});
> 3 | afterEach(() => {});
    | ^^^^^^^^^^^^^^^^^^^ Hook \`afterEach\` should come before any test or \`describe\` in its scope.
  4 | it("b", () => {});

`;

exports[`prefer-hooks-on-top > invalid(6): import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';\ndescribe(\"s\", () => {});\nbefore(() => {}); 1`] = `

  1 | import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';
  2 | describe("s", () => {});
  3 | before(() => {});

`;

exports[`prefer-hooks-on-top > invalid(6): import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';\ndescribe(\"s\", () => {});\nbefore(() => {}); 2`] = `

Message:
  1 | import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';
  2 | describe("s", () => {});
> 3 | before(() => {});
    | ^^^^^^^^^^^^^^^^ Hook \`before\` should come before any test or \`describe\` in its scope.

`;

exports[`prefer-hooks-on-top > invalid(7): import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';\ndescribe(\"outer\", () => { describe(\"inner\", () => {}); after(() => {}); }); 1`] = `

  1 | import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';
  2 | describe("outer", () => { describe("inner", () => {}); after(() => {}); });

`;

exports[`prefer-hooks-on-top > invalid(7): import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';\ndescribe(\"outer\", () => { describe(\"inner\", () => {}); after(() => {}); }); 2`] = `

Message:
  1 | import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';
> 2 | describe("outer", () => { describe("inner", () => {}); after(() => {}); });
    |                                                        ^^^^^^^^^^^^^^^ Hook \`after\` should come before any test or \`describe\` in its scope.

`;

exports[`prefer-hooks-on-top > invalid(8): import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';\ntest(\"a\", () => {});\nafter(() => {});\ntest(\"b\", () => {});\nbefore(() => {}); 1`] = `

  1 | import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';
  2 | test("a", () => {});
  3 | after(() => {});
  4 | test("b", () => {});
  5 | before(() => {});

`;

exports[`prefer-hooks-on-top > invalid(8): import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';\ntest(\"a\", () => {});\nafter(() => {});\ntest(\"b\", () => {});\nbefore(() => {}); 2`] = `

Message:
  1 | import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';
  2 | test("a", () => {});
> 3 | after(() => {});
    | ^^^^^^^^^^^^^^^ Hook \`after\` should come before any test or \`describe\` in its scope.
  4 | test("b", () => {});
  5 | before(() => {});

`;

exports[`prefer-hooks-on-top > invalid(8): import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';\ntest(\"a\", () => {});\nafter(() => {});\ntest(\"b\", () => {});\nbefore(() => {}); 3`] = `

Message:
  1 | import {describe, it, test, before, beforeEach, after, afterEach} from 'node:test';
  2 | test("a", () => {});
  3 | after(() => {});
  4 | test("b", () => {});
> 5 | before(() => {});
    | ^^^^^^^^^^^^^^^^ Hook \`before\` should come before any test or \`describe\` in its scope.

`;

exports[`prefer-hooks-on-top > invalid(9): import test from 'node:test';\ntest(\"a\", () => {});\ntest.beforeEach(() => {}); 1`] = `

  1 | import test from 'node:test';
  2 | test("a", () => {});
  3 | test.beforeEach(() => {});

`;

exports[`prefer-hooks-on-top > invalid(9): import test from 'node:test';\ntest(\"a\", () => {});\ntest.beforeEach(() => {}); 2`] = `

Message:
  1 | import test from 'node:test';
  2 | test("a", () => {});
> 3 | test.beforeEach(() => {});
    | ^^^^^^^^^^^^^^^^^^^^^^^^^ Hook \`beforeEach\` should come before any test or \`describe\` in its scope.

`;
